# python_microservice_template

./: .gitignore  README.MD  main.py  pyproject.toml
src/: config.py  main.py
src/modules/users/domain/: entities.py
src/modules/users/infrastructure/http/: routers.py  schemas.py
src/modules/users/infrastructure/persistence/: models.py  repositories.py
src/shared/infrastructure/persistence/: database.py
tests/: diag_pg_connect.py
